--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "chalk": "^2.4.2",
     "cli-spinner": "^0.2.8",
     "commander": "^2.19.0",
-    "download-git-repo": "^1.1.0"
+    "download-git-repo": "^1.1.0",
+    "fs-extra": "^7.0.1",
+    "inquirer": "^6.2.2"
   }
 }
