--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adomin-cli",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "./index.js",
   "bin": {
     "adomin-cli": "./index.js"
@@ -27,6 +27,9 @@
     "commander": "^2.19.0",
     "download-git-repo": "^1.1.0",
     "fs-extra": "^7.0.1",
-    "inquirer": "^6.2.2"
+    "handlebar": "^1.0.0",
+    "inquirer": "^6.2.2",
+    "metalsmith": "^2.3.0",
+    "rimraf": "^2.6.3"
   }
 }
